--- a/webserver/css/scrna.css
+++ b/webserver/css/scrna.css
@@ -1,7 +1,6 @@
 #main-container {
     /* background-color: yellow; */
     min-height: 30vw;
-    width: 100%;
     position: relative;
 }
 
@@ -9,6 +8,7 @@
     position: absolute;
     top: 0;
     left: 2.5vw;
+    accent-color: green;
 }
 
 #whole-img-container {
@@ -54,6 +54,9 @@
 
 #whole-img-container.init #static-imgs img {
     height: 100%;
+    height: 88%;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #whole-img-container.init.eecs #static-imgs img {
@@ -68,6 +71,12 @@
     margin-right: 2.5%;
 }
 
+#whole-img-container.generated.eecs #main-img-container {
+    margin-top: 2.5vw;
+    height: 80%;
+    width: 60%;
+}
+
 #whole-img-container.generated #static-imgs {
     flex-direction: column;
     width: 25%;
@@ -76,6 +85,10 @@
     /* margin-top: -3vw; */
     row-gap: 1vw;
     height: min-content;
+}
+
+#whole-img-container.generated.eecs #static-imgs {
+    width: 31%;
 }
 
 #whole-img-container.generated.ep #static-imgs {
@@ -90,7 +103,7 @@
     position: absolute;
     top: 35vw;
     left: 2.5vw;
-    width: 60vw;
+    width: 70vw;
     height: 10vw;
     /* background-color: lightblue; */
     display: none;
@@ -128,6 +141,7 @@
     font-size: 1.5vw;
     line-height: var(--lib-text-single-height);
     color: red;
+    width: 30vw;
 }
 
 #region-button, #goblet-button {
@@ -135,16 +149,16 @@
     left: 0;
     width: 17vw;
     border-radius: 0.5vw;
-    color: #000;
-    background-color: rgb(60, 255, 122);
+    color: white;
+    background-color: #79902d;
 }
 
 #region-button:hover, #goblet-button:hover {
-    background-color: rgb(121, 255, 163);
+    background-color: #91ad5a;
 }
 
 #region-button:active, #goblet-button:active {
-    background-color: rgb(157, 255, 188);
+    background-color: #a2c360;
 }
 
 #region-button {
@@ -187,6 +201,10 @@
     display: none !important;
 }
 
+.loading > #email-result {
+    display: none !important;
+}
+
 .error > #final-img {
     display: none !important;
 }
@@ -195,11 +213,19 @@
     display: none !important;
 }
 
+.error > #email-result {
+    display: none !important;
+}
+
 .shown > #loading {
     display: none !important;
 }
 
 .shown > #error {
+    display: none !important;
+}
+
+.shown > #email-result {
     display: none !important;
 }
 
@@ -233,25 +259,39 @@
 }
 
 #region-left {
-    top: 5vw;
+    top: 3.5vw;
     width: 45vw;
-    left: 7.5vw;
+    left: 6vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #region-upright {
     top: 3vw;
     left: 57.5vw;
     width: 35vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #region-downright {
     top: 25vw;
     left: 57.5vw;
     width: 35vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+}
+
+#region-right-both {
+    top: 5vw;
+    width: 40vw;
+    left: 55vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #region-xls {
-    top: 42vw;
+    top: 39vw;
     width: 15vw;
     left: 20vw;
 }
@@ -260,16 +300,219 @@
     top: 3vw;
     width: 40vw;
     left: 5vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #goblet-right {
     top: 3vw;
     left: 47.5vw;
     width: 45vw;
+    border-radius:1vw 1vw 1vw 1vw;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
 }
 
 #goblet-xls {
     top: 39vw;
     width: 15vw;
     left: 20vw;
+}
+
+#email-text {
+    position: absolute;
+    top: 0;
+    left: 19vw;
+    font-size: 1.35vw;
+    line-height: var(--lib-text-single-height);
+}
+
+#email-input {
+    position: absolute;
+    top: 0;
+    left: 24vw;
+    width: 11vw;
+}
+
+.eecs #email-text {
+    display: none;
+}
+
+.eecs #email-input {
+    display: none;
+}
+
+.ep #submit-button {
+    left: 38vw;
+}
+
+.ep #error-msg {
+    left: 47vw;
+}
+
+#email-result {
+    display: none;
+    font-size: 1.5vw;
+    line-height: 1.35;
+    width: 60%;
+    text-align: center;
+}
+
+.email #email-result {
+    display: block;
+}
+
+.email #loading {
+    display: none !important;
+}
+
+.email #error {
+    display: none !important;
+}
+
+.email #final-img {
+    display: none !important;
+}
+
+#ep-right {
+    height: 65% !important;
+}
+
+#ep-left {
+    height: 100% !important;
+}
+
+#eecs-right {
+    height: 65% !important;
+}
+
+#eecs-left {
+    height: 100% !important;
+}
+
+.sub-title {
+    margin-top: 1.5vw;
+    padding-bottom: 0.5vw;
+    font-family: "Lexend", sans-serif;
+    text-align: center;
+    color: #9a4942;
+
+}
+
+.sub-description {
+    margin-top: 2vw;
+    text-align: center;
+    font-size: 1.5vw;
+    margin-left: 320px;
+    margin-right:320px;
+}
+
+.card-selection {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.5vw;
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+}
+
+.card {
+    border: 0.3vw solid #f5f5f5;
+    border-radius: 2vw;
+    padding: 1vw;
+    padding-bottom: 4vw;
+    padding-top: 4vw;
+    cursor: pointer;
+    transition: 0.3s ease;
+    width: 25vw;
+    text-align: center;
+    background-color: #9a4942;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+
+}
+
+.card > h3 {
+    font-family: "Lexend", sans-serif;
+    color: white;
+}
+
+.card > p{
+    padding-top:1.4vw;
+    font-size:1.2vw;
+    color: white;
+}
+
+.card:hover {
+    transform: translateY(-4px);
+    background-color: rgb(133, 77, 72);
+}
+
+#left-card{
+    margin-left:320px;
+}
+
+#right-card{
+    margin-right:320px;
+}
+
+input[type="radio"]:checked + .card {
+    border-color: #007BFF;
+    background-color: #e6f0ff;
+    box-shadow: 0 6px 12px rgba(0,123,255,0.3);
+}
+
+
+.hidden {
+    display: none !important;
+}
+
+body {
+    background: linear-gradient(to top, #f0e5e4, rgb(255, 255, 255));
+}
+
+.chat-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.chat-button {
+  background-color: #9a4942;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+.chat-box {
+  background: #e0e0e0;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  padding: 0.75rem;
+  width: 250px;
+  margin-bottom: 10px;
+  font-size: 0.55rem;
+  height:256px;
+}
+
+.chat-box p {
+  margin: 0 0 0.5rem 0;
+  font-size:16px;
+}
+
+.chat-input {
+  width: 100%;
+  border: none;
+  border-radius: 6px;
+  background-color:white;
+  font-size: 12px;
+  box-sizing: border-box;
+  margin-top:90%;
 }
